--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -74,11 +74,11 @@
                     <mat-icon>cancel</mat-icon>
                 </button>
             </div>
-            <!-- <div>
+            <div>
                 <div style="margin-top:15px;padding: 15px;" class="alert alert-warning" *ngIf="errorMessage.length>0"
                     innerHTML="Signup failed!<br />{{ errorMessage }}">
                 </div>
-            </div> -->
+            </div>
         </form>
         <div class="alert alert-success" *ngIf="isSuccessful">
             Please check and click on the link provided in your email for verification.           
