--- a/src/app/modules/student/searchstudent/searchstudent.component.scss
+++ b/src/app/modules/student/searchstudent/searchstudent.component.scss
@@ -38,7 +38,7 @@ mat-header-cell{
     text-align: center;
     
 }
-.mat-column-Active,.mat-column-StudentId{
+.mat-column-PID,.mat-column-Active,.mat-column-StudentId{
     flex:1 1 80px;
 }
 .mat-column-Action,.mat-column-ClassName,.mat-column-Name,
