--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -34,16 +34,16 @@
         <mat-icon>search</mat-icon>
     </button>
 </form>
-<mat-table #table [dataSource]="dataSource">
+<mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="StudentRollNo">
-        <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Student
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Student
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             {{element.StudentRollNo}}
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="AttendanceStatus">
-        <mat-header-cell *matHeaderCellDef> Present&nbsp;
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Present&nbsp;
             <mat-checkbox *ngIf="StudentAttendanceList.length>0" matTooltip="check/uncheck all" mat-mini-fab
                 (click)="$event.stopPropagation()" (change)="checkall($event)">
             </mat-checkbox>
@@ -55,7 +55,7 @@
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Remarks">
-        <mat-header-cell *matHeaderCellDef> Remarks </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Remarks </mat-header-cell>
         <mat-cell *matCellDef="let element">
             <mat-form-field [style.width.px]="150">
                 <textarea matInput [maxlength]="250" autocomplete="Off" (change)="onChangeEvent(element,$event)"
