--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -101,7 +101,7 @@
                                 <mat-footer-cell *matFooterCellDef></mat-footer-cell>
                             </ng-container>
                             <ng-container matColumnDef="Amount">
-                                <mat-header-cell *matHeaderCellDef style="justify-content: end;"> Amount
+                                <mat-header-cell *matHeaderCellDef style="justify-content: end;"> Amount &#x20b9;
                                 </mat-header-cell>
                                 <mat-cell *matCellDef="let element" style="justify-content: end;">
                                     <mat-form-field>
