--- a/src/app/modules/control/organization/organization.component.scss
+++ b/src/app/modules/control/organization/organization.component.scss
@@ -1,3 +1,7 @@
+host
+:host{
+    overflow: hidden;
+}
 mat-form-field{
     margin-right: 15px;
     width: 98%;
@@ -6,13 +10,17 @@ mat-cell:first-of-type{
     padding-left: 0px;
 }
 .mat-column-CreatedDate,.mat-column-ValidTo{
-    flex: 1 1 140px;
+    flex: 1 0 140px;
 }
-.mat-column-Contact,.mat-column-Active,.mat-column-Action,.mat-column-Country,.mat-column-State,.mat-column-City{
-    flex: 1 1 120px;    
+.mat-column-Contact,.mat-column-Active,
+.mat-column-Action,
+.mat-column-CountryId,
+.mat-column-StateId,
+.mat-column-CityId{
+    flex: 1 0 120px;    
 }
 .mat-column-LogoPath,
 .mat-column-Address,
-.mat-column-OrganizationName{
-    flex: 1 1 150px;
+.mat-column-OrganizationName,.mat-column-RegistrationNo{
+    flex: 1 0 150px;
 }
