--- a/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
+++ b/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
@@ -81,7 +81,7 @@
                     <mat-icon>start</mat-icon>
                 </button>
                 <button
-                    [disabled]="loading || !element.Action || Permission=='read' || EvaluationSubmitted || !EvaluationStarted"
+                    [disabled]="loading || !element.Action1 || Permission=='read' || EvaluationSubmitted || !EvaluationStarted"
                     matTooltip="submit" mat-mini-fab color="accent" (click)="SubmitEvaluation()">
                     <mat-icon>done_all</mat-icon>
                 </button>
