--- a/src/app/modules/student/generatecertificate/generatecertificate.component.scss
+++ b/src/app/modules/student/generatecertificate/generatecertificate.component.scss
@@ -9,5 +9,10 @@ mat-header-row, mat-row{
       padding: 30px;
   }
   .divCls{
+      font-size: larger !important;
       border: 1px solid lightgray;
+  }
+  .element-row{
+      padding-left: 30px;
+      padding-right: 30px;
   }
