--- a/src/app/modules/classes/feedefinition/feedefinition.component.html
+++ b/src/app/modules/classes/feedefinition/feedefinition.component.html
@@ -99,7 +99,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" 
                     fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action" matTooltip="save" mat-mini-fab
+                        <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
                             (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
