--- a/src/app/modules/control/customerplans/customerplans.component.html
+++ b/src/app/modules/control/customerplans/customerplans.component.html
@@ -1,8 +1,12 @@
 <div style="display: flex;flex-direction: column;">
     <div style="padding:30px 15px 10px 15px;">
-        <div style="font-size: x-large;display: flex; justify-content: center; align-items: center;"><strong>My Plan</strong></div>
+        <div style="font-size: x-large;display: flex; justify-content: center; align-items: center;"><strong>My
+                Plan</strong></div>
     </div>
-    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;">Please wait while setting your data</mat-spinner>
+    <span *ngIf="loading" style="display: flex;justify-content: center;">
+        <span>Please wait while setting your data</span>
+        <mat-spinner diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+    </span>
     <!-- <alert></alert> -->
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
@@ -16,15 +20,15 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                   
+
                     <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
                         (click)="GetCustomerPlans()">
                         <mat-icon>search</mat-icon>
                     </button>
                 </div>
             </form>
-          
-            <mat-table #table [dataSource]="dataSource" style="width: 900px;">
+
+            <mat-table #table [dataSource]="dataSource" style="width: 1400px;">
                 <ng-container matColumnDef="PlanName">
                     <mat-header-cell *matHeaderCellDef>Plan
                     </mat-header-cell>
@@ -42,7 +46,7 @@
                 <ng-container matColumnDef="Description">
                     <mat-header-cell *matHeaderCellDef style="justify-content:center">Description
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" style="padding-top:25px;" >
+                    <mat-cell *matCellDef="let element" style="padding-top:25px;">
                         <ul>
                             <li *ngFor="let item of element.Features">{{item.FeatureName}}</li>
                         </ul>
@@ -52,7 +56,7 @@
                     <mat-header-cell *matHeaderCellDef>Min Count
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.MinCount}}
+                        {{element.MinCount}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MinPrice">
@@ -66,7 +70,7 @@
                     <mat-header-cell *matHeaderCellDef>Currency
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.Currency}}
+                        {{element.Currency}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="PersonOrItemCount">
@@ -74,9 +78,8 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field>
-                            <input (keyup)="onBlur(element)" type="number"
-                            [(ngModel)]="element.PersonOrItemCount" [value]="element.PersonOrItemCount" matInput
-                                autocomplete="off" [max]="100000">                          
+                            <input (keyup)="onBlur(element)" type="number" [(ngModel)]="element.PersonOrItemCount"
+                                [value]="element.PersonOrItemCount" matInput autocomplete="off" [max]="100000">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -85,20 +88,17 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input (blur)="onBlur(element)" type="number"
-                            [(ngModel)]="element.LoginUserCount" [value]="element.LoginUserCount" matInput
-                                autocomplete="off" [max]="100000">                          
+                            <input (blur)="onBlur(element)" type="number" [(ngModel)]="element.LoginUserCount"
+                                [value]="element.LoginUserCount" matInput autocomplete="off" [max]="100000">
                         </mat-form-field>
                     </mat-cell>
-                </ng-container>                
+                </ng-container>
                 <ng-container matColumnDef="Formula">
                     <mat-header-cell *matHeaderCellDef> Formula </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <textarea (blur)="onBlur(element)" 
-                            [(ngModel)]="element.Formula" 
-                            [value]="element.Formula" matInput
-                                autocomplete="off" [maxlength]="1000">
+                            <textarea (blur)="onBlur(element)" [(ngModel)]="element.Formula" [value]="element.Formula"
+                                matInput autocomplete="off" [maxlength]="1000">
                             </textarea>
                         </mat-form-field>
                     </mat-cell>
@@ -107,7 +107,7 @@
                     <mat-header-cell *matHeaderCellDef style="justify-content:center">Amount Per Month
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" style="padding:15px; justify-content: end;">
-                       {{element.AmountPerMonth}}
+                        {{element.AmountPerMonth}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Active">
@@ -122,8 +122,8 @@
                     <mat-header-cell *matHeaderCellDef>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button [disabled]="loading || !element.Action || SelectedCustomer=='TTP' || PlanSelected" 
-                        matTooltip="trial" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || !element.Action || SelectedCustomer=='TTP' || PlanSelected"
+                            matTooltip="trial" mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon>beenhere</mat-icon>
                         </button>
                     </mat-cell>
@@ -133,10 +133,8 @@
             </mat-table>
         </div>
         <div style="width:100%; display: flex;align-items: center; justify-content: center;padding: 15px 15px 15px 0px">
-            <button [disabled]="loading || !PlanSelected" 
-            mat-raised-button color="accent" 
-            matTooltip="go to login" 
-            (click)="login()">
+            <button [disabled]="loading || !PlanSelected" mat-raised-button color="accent" matTooltip="go to login"
+                (click)="login()">
                 <mat-icon>login</mat-icon>
             </button>
         </div>
