--- a/src/app/modules/control/settingboard/settingboard.component.html
+++ b/src/app/modules/control/settingboard/settingboard.component.html
@@ -2,7 +2,7 @@
 <mat-card>
     <mat-card-title style="margin: 20px;">Initial Setting</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content style="margin:20px;max-height: inherit;">
+    <mat-card-content style="margin:20px;">
         <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
