--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -48,6 +48,7 @@
                                        || element.MasterDataName=='Admin'
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
+                                       || element.MasterDataName=='Employee'
                                        || element.MasterDataName=='Cash'
                                        || element.MasterDataName=='Teaching'  
                                        || element.MasterDataName=='Non Teaching')"  
