--- a/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
+++ b/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
@@ -33,7 +33,10 @@
             <mat-cell *matCellDef="let element">
                 <mat-form-field>
                     <mat-label>role</mat-label>
-                    <mat-select [value]="element.RoleId" (selectionChange)="onBlur(element)"
+                    <mat-select 
+                        [disabled]="element.Role=='Admin'"
+                        [value]="element.RoleId"                        
+                        (selectionChange)="onBlur(element)"
                         [(ngModel)]="element.RoleId">
                         <mat-option *ngFor="let item of Roles" [value]="item.MasterDataId">
                             {{item.MasterDataName}}</mat-option>
