--- a/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
+++ b/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
@@ -1,7 +1,14 @@
 
 <mat-card>
     <mat-card-title style="margin: 20px;">Employee</mat-card-title>
-    <mat-card-subtitle style="font-weight: bold; margin:0px 20px 20px 20px;background-color: lightgray;padding: 10px;">{{EmployeeName}}</mat-card-subtitle>
+    <mat-card-subtitle style="margin:20px"
+    style="align-items: center; font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;display: flex;justify-content: space-between;">
+        <span>{{EmployeeName}}</span>
+        <span><button (click)="back()" matTooltip="back" class="mat-raised-button">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+    </span>
+    </mat-card-subtitle>
     <mat-card-content style="margin:20px;max-height: inherit;">
         <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
