--- a/src/app/modules/employeedetail/employeesearch/employeesearch.component.html
+++ b/src/app/modules/employeedetail/employeesearch/employeesearch.component.html
@@ -5,22 +5,22 @@
         <!-- <alert></alert> -->
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="EmployeeSearchForm" fxLayout="row wrap" fxLayoutAlign="center center">
-
-            <mat-form-field appearance="outline" [style.width.px]="350">
-                <mat-label>employee</mat-label>
-                <input type="text" matInput formControlName="searchemployeeName" [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                    <mat-option *ngFor="let option of filteredEmployees | async" [value]="option">
-                        {{option.Name}}
-                    </mat-option>
-                </mat-autocomplete>
-            </mat-form-field>
+            
             <mat-form-field appearance="outline" [style.width.px]="250">
                 <mat-label>employee code</mat-label>
                 <input type="text" matInput formControlName="searchEmployeeCode" [matAutocomplete]="autoF">
                 <mat-autocomplete #autoF="matAutocomplete" [displayWith]="displayFnC">
                     <mat-option *ngFor="let option of filteredEmployeeCode | async" [value]="option">
                         {{option.EmployeeCode}}
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+            <mat-form-field appearance="outline" [style.width.px]="350">
+                <mat-label>employee</mat-label>
+                <input type="text" matInput formControlName="searchemployeeName" [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                    <mat-option *ngFor="let option of filteredEmployees | async" [value]="option">
+                        {{option.Name}}
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
@@ -81,9 +81,9 @@
                         <mat-icon>pageview</mat-icon>
                     </button>
                     &nbsp;
-                    <button [disabled]="loading" matTooltip="Fees" mat-mini-fab (click)="feepayment(element)">
+                    <!-- <button [disabled]="loading" matTooltip="Fees" mat-mini-fab (click)="feepayment(element)">
                         <mat-icon>payments</mat-icon>
-                    </button>
+                    </button> -->
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -92,9 +92,9 @@
         </mat-table>
         <mat-paginator [pageSizeOptions]="[10,25,50]"></mat-paginator>
     </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center center">
+    <!-- <mat-card-actions fxLayoutAlign="center center">
         <button [disabled]="loading" (click)="exportArray()" matTooltip="export to excel" class="mat-raised-button">
             <mat-icon>download</mat-icon>
         </button>
-    </mat-card-actions>
+    </mat-card-actions> -->
 </mat-card>
